# spotantic

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci-pre-commit.yml  publish-pypi.yml  release-and-publish.yml  run-pre-commit.yml  run-tests.yml  test-docs.yml
docs/source/: albums_endpoint.rst  api_reference.rst  artists_endpoint.rst  auth_reference.rst  authorization.rst  categories_endpoint.rst  client_reference.rst  conf.py  episodes_endpoint.rst  examples.rst  index.rst  installation.rst  library_endpoint.rst  markets_endpoint.rst  player_endpoint.rst  playlists_endpoint.rst  pyspotify_models.rst  quickstart.rst  search_endpoint.rst  shows_endpoint.rst  spotify_models.rst  tracks_endpoint.rst  types_reference.rst  users_endpoint.rst
examples/: create_client.py
pyspotify/: client.py
pyspotify/_utils/: logger.py  utils.py
pyspotify/_utils/auth/: __init__.py  _generate_auth_request_tokens.py  auth_settings.py  generate_state.py
pyspotify/_utils/endpoints/: request_params_validation.py
pyspotify/_utils/models/: _custom_serializers.py
pyspotify/auth/: __init__.py  _auth_code_flow.py  _auth_code_pkce_flow.py  _auth_manager_base.py  _auth_requests.py  _auth_settings.py  _client_credentials_flow.py  access_token_info.py  auth_code_flow.py  auth_code_pkce_flow.py  auth_manager_base.py  auth_requests.py  auth_settings.py  client_credentials_flow.py
pyspotify/client/: __init__.py  _client.py
pyspotify/custom_types/: __init__.py  _auth_scope.py  _generic_custom_types.py  _spotify_api_types.py
pyspotify/endpoints/: albums.py  artists.py  categories.py  episodes.py  markets.py  player.py
pyspotify/endpoints/albums/: __init__.py  _check_user_saved_albums.py  _get_album.py  _get_album_tracks.py  _get_new_releases.py  _get_several_albums.py  _get_user_saved_albums.py  _remove_user_saved_albums.py  _save_albums_for_current_user.py
pyspotify/endpoints/artists/: __init__.py  _get_artist.py  _get_artist_albums.py  _get_artist_top_tracks.py  _get_several_artists.py
pyspotify/endpoints/categories/: __init__.py  _get_several_browse_categories.py  _get_single_browse_category.py
pyspotify/endpoints/episodes/: __init__.py  _check_user_saved_episodes.py  _get_episode.py  _get_several_episodes.py  _get_user_saved_episodes.py  _remove_user_saved_episodes.py  _save_episodes_for_current_user.py
pyspotify/endpoints/markets/: _get_available_markets.py
pyspotify/endpoints/player/: __init__.py  _add_item_to_playback_queue.py  _get_available_devices.py  _get_currently_playing_track.py  _get_playback_state.py  _get_recently_played_tracks.py  _get_user_queue.py  _pause_playback.py  _seek_to_position.py  _set_playback_volume.py  _set_repeat_mode.py  _skip_to_next.py  _skip_to_previous.py  _start_resume_playback.py  _toggle_playback_shuffle.py  _transfer_playback.py
pyspotify/endpoints/playlists/: __init__.py  _add_custom_playlist_cover_image.py  _add_items_to_playlist.py  _change_playlist_details.py  _create_playlist.py  _get_current_user_playlists.py  _get_playlist.py  _get_playlist_cover_image.py  _get_playlist_items.py  _get_user_playlists.py  _remove_playlist_items.py  _update_playlist_items.py
pyspotify/endpoints/search/: __init__.py  _search_for_item.py
pyspotify/endpoints/shows/: __init__.py  _check_user_saved_shows.py  _get_several_shows.py  _get_show.py  _get_show_episodes.py  _get_user_saved_shows.py  _remove_user_saved_shows.py  _save_shows_for_current_user.py
pyspotify/endpoints/tracks/: _check_user_saved_tracks.py  _get_several_tracks.py  _get_track.py  _get_user_saved_tracks.py  _remove_user_saved_tracks.py  _save_tracks_for_current_user.py
pyspotify/endpoints/users/: _check_if_current_user_follows_playlist.py  _check_if_user_follows_artists_or_users.py  _follow_artists_or_users.py  _follow_playlist.py  _get_current_user_profile.py  _get_followed_artists.py  _get_user_profile.py  _get_user_top_items.py  _unfollow_artists_or_users.py  _unfollow_playlist.py
pyspotify/models/: __init__.py  _api_call_model.py  _error_response_model.py  _request_model.py
pyspotify/models/auth/: __init__.py  _access_token_info.py  _access_token_request_body.py  _auth_code_request_params.py  _auth_settings.py
pyspotify/models/spotify/: __init__.py  _album_model.py  _artist_model.py  _category_model.py  _copyright_model.py  _current_user_model.py  _currently_playing_item_model.py  _device_model.py  _episode_model.py  _image_model.py  _paged_result_model.py  _paged_result_with_cursors_model.py  _play_history_model.py  _playback_state_model.py  _playlist_base_model.py  _playlist_model.py  _playlist_summary_model.py  _playlist_track_model.py  _saved_album_model.py  _saved_episode_model.py  _saved_show_model.py  _saved_track_model.py  _show_model.py  _simplified_album_model.py  _simplified_artist_model.py  _simplified_episode_model.py  _simplified_playlist_model.py  _simplified_show_model.py  _simplified_track_model.py  _track_model.py  _user_model.py  _user_queue_model.py
pyspotify/types/: __init__.py  _spotify_types.py
pyspotify/types/exceptions/: __init__.py  _custom_exceptions.py
spotantic/_utils/models/: __init__.py  _custom_serializers.py
spotantic/auth/: __init__.py  _auth_code_flow.py  _auth_manager_base.py  _client_credentials_flow.py
spotantic/client/: __init__.py  _client.py
spotantic/models/: __init__.py  _api_call_model.py  _request_model.py
spotantic/types/: __init__.py
tests/: conftest.py
tests/unit/: test_custom_types.py  test_request_model.py
(+623 files in other folders)
