[project]
name = "Spotantic"
version = "0.1.0"
description = "Async Spotify API client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.406",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "Q", "I", "RUF022"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pyright]
exclude = ["**/__pycache__", ".venv", "**/node_modules", "**/.*"]
venvPath = "."
venv = ".venv"

[tool.pytest]
minversion = "9.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--import-mode=importlib",
]
testpaths = ["tests"]
asyncio_mode = "auto"

markers = [
    "readonly: tests that do not modify data",
    "mutation: tests that modify data (create/delete/update)",
    "user_library: tests that are interactive with the user's Spotify library",
    "requires_active_device: tests that require an active Spotify device",
    "affects_playback: tests that affect playback (e.g., play/pause/skip)",
]
