[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotantic"
version = "0.1.3"
authors = [
  { name="Sebastian Domagała"},
]
description = "Async Spotify API client"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["spotify", "async", "api-client", "aiohttp"]
license="MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.13.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]

docs = [
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-rtd-theme>=3.1.0",
]

[project.urls]
"Homepage" = "https://github.com/domagalasebastian/spotantic"
"Documentation" = "https://spotantic.readthedocs.io"
"Bug Tracker" = "https://github.com/domagalasebastian/spotantic/issues"
"Questions" = "https://github.com/domagalasebastian/spotantic/discussions"

[tool.hatch.build.targets.wheel]
packages = ["src/spotantic"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "Q", "I", "D", "RUF022"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"!src/**.py" = ["D"]
"__init__.py" = ["D"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["spotantic"]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pyright]
exclude = ["**/__pycache__", ".venv", "**/node_modules", "**/.*"]
venvPath = "."
venv = ".venv"

[tool.pytest]
minversion = "9.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--import-mode=importlib",
]
testpaths = ["tests"]
asyncio_mode = "auto"

markers = [
    "readonly: tests that do not modify data",
    "mutation: tests that modify data (create/delete/update)",
    "user_library: tests that are interactive with the user's Spotify library",
    "requires_active_device: tests that require an active Spotify device",
    "affects_playback: tests that affect playback (e.g., play/pause/skip)",
]
